[package]
name = "s3b"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.1"
aws-sdk-dynamodb = { version = "1.42", features = ["rt-tokio"] }
bincode = "1.3"
blake3 = { version = "1.5", features = ["rayon"] }
clap = { version = "4.5", features = ["cargo"] }
futures = "0.3"
gluesql = { version = "0.16", features = ["gluesql_sled_storage"] }
object_store = { version = "0.11", features = ["aws"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.5"
